Remove unused opens